# src/main/java/org/app/inventory/api/service/UserService.java
@@ -1,8 +1,8 @@
 package org.app.inventory.api.service;
 
+import org.app.inventory.domain.model.User;
 import org.openapitools.model.NewUserRequest;
-import org.openapitools.model.OperationResponse;
 
 public interface UserService {
-  OperationResponse createUser(NewUserRequest newUserRequest);
+  User createUser(NewUserRequest newUserRequest);
 }
