# src/main/resources/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.4
+openapi: 3.1.0
 info:
   title: Inventory API
   version: 1.0.0
@@ -23,7 +23,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SignInResponse'
-
   /users/create:
     post:
       summary: Create user
@@ -35,12 +34,12 @@ paths:
             schema:
               $ref: '#/components/schemas/NewUserRequest'
       responses:
-        '200':
+        '201':
           description: Successful user creation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/OperationResponse'
+                $ref: '#/components/schemas/UserResponse'
         '404':
           description: Resource not found. In this case, the possible causes is that the role id does not exist in the database.
           content:
@@ -55,43 +54,59 @@ components:
       properties:
         email:
           type: string
+          example: email@example.com
         password:
           type: string
-      example:
-        email: "test@example.com"
-        password: "password"
+          example: password123
     SignInResponse:
       type: object
       properties:
         token:
           type: string
-      example:
-        token: "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+          example: eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
     NewUserRequest:
       type: object
       properties:
         firstName:
           type: string
+          example: John
         lastName:
           type: string
+          example: Doe
         roleId:
           type: integer
+          example: 1
         email:
           type: string
+          example: email@example.com
         password:
           type: string
-      example:
-        email: "test@example.com"
-        password: "password"
-        name: "John"
-        surname: "Doe"
+          example: password1234
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: Doe
+        roleId:
+          type: integer
+          example: 1
+        email:
+          type: string
+          example: email@example.com
     OperationResponse:
       type: object
       properties:
         message:
           type: string
-      example:
-        message: "User created successfully"
+          example: User created successfully
     ExceptionResponse:
       type: object
       properties:
